--- a/NativeWinLib/NativeWinLib.vcxproj.filters
+++ b/NativeWinLib/NativeWinLib.vcxproj.filters
@@ -22,5 +22,8 @@
     <ClCompile Include="pch.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="linux.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
