--- a/CoreConsole/CoreConsole.csproj
+++ b/CoreConsole/CoreConsole.csproj
@@ -20,4 +20,12 @@
     <Exec Command="xcopy /Y /D $(SolutionDir)x64\$(ConfigurationName)\* $(ProjectDir)$(OutDir)" />
   </Target>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
