--- a/NativeWinLib/NativeWinLib.vcxproj
+++ b/NativeWinLib/NativeWinLib.vcxproj
@@ -158,8 +158,9 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="linux.cpp" />
+    <ClCompile Include="basic.cpp" />
+    <ClCompile Include="basic_linux.cpp" />
+    <ClCompile Include="image.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
