--- a/NativeWinLib/NativeWinLib.vcxproj
+++ b/NativeWinLib/NativeWinLib.vcxproj
@@ -113,6 +113,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
     </Link>
+    <PostBuildEvent>
+      <Command>del /Q C:\Users\t_hos\source\mygithub\CSharpPInvokeSample\CoreConsole\bin\Debug\netcoreapp2.1\*</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
